--- a/report.tex
+++ b/report.tex
@@ -234,6 +234,9 @@ changes break them.
 
 \section{Code Statistics}
 
+The project consists of 613 source lines of Haskell code. All code was
+written by me, and has been run and debugged.
+
 \section*{Appendix}
 \appendix
 
