--- a/slides.tex
+++ b/slides.tex
@@ -63,7 +63,7 @@ A list is an \textit{encoding} of a desired solution.
 \begin{block}{Trees}
 \begin{itemize}
 \item Trees are \textit{concrete} program abstract syntax trees (AST's).
-\item Fitness involves \textit{evaluating} programs.
+\item Fitness involves \textit{running} the programs.
 \end{itemize}
 \end{block}
 
@@ -284,7 +284,7 @@ The eliminator is implicit in the constructors!
 \begin{itemize}
 \item Single-level Tournament selection.
 \item Mutation.
-\item Correct-crossover.
+\item Correct-by-construction crossover.
 \item Good set of primitive combinators for combinatory logic problems.
 \item Partial evaluation of candidate solutions.
 \item Attempt at extension to less restrictive semantic unification problems.
